ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codekids-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: codekids.local
      http:
        paths:
          - path: /java
            pathType: Prefix
            backend:
              service:
                name: java-backend
                port:
                  number: 8080
          - path: /python
            pathType: Prefix
            backend:
              service:
                name: python-backend
                port:
                  number: 5000
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
